# MapEletro

./: .gitmodules  08-Relatorio-do-Estagiario.docx  DeadBug.psd  ~$-Relatorio-do-Estagiario.docx  ~WRL0093.tmp
AmpOp/: FrequenciaCorteAmpOp.psd  RespostaEmFrequenciaAmpOp.psd  TEK0039.psd
Cuba/: Cuba.ai
KiCad/MapeamentoEletroanatomica/: Custom.bak  MapeamentoEletroanatomica.kicad_pcb  MapeamentoEletroanatomica.kicad_prl  MapeamentoEletroanatomica.kicad_pro  MapeamentoEletroanatomica.kicad_sch  MapeamentoEletroanatomica.kicad_sch-bak  ~MapeamentoEletroanatomica.kicad_sch.lck
Latex/: test.tex
MicroController/Pico/src/: .gitignore  CMakeLists.txt  CMakeLists2040.txt  CMakeLists2350.txt  main.c  tusb_config.h  usb_descriptors.c
MicroController/Receiver/: plot_serial.py
MicroController/Receiver/AvaloniaReceiver/: AvaloniaReceiver.sln
MicroController/Receiver/AvaloniaReceiver/AvaloniaReceiver/: App.axaml  App.axaml.cs  AvaloniaReceiver.csproj  Program.cs  ViewLocator.cs  app.manifest
MicroController/Receiver/C_Receiver/: CMakeLists.txt  main.c
MicroController/Receiver/CsharpReceiver/: CsharpReceiver.sln
MicroController/Receiver/CsharpReceiver/CsharpReceiver/: App.xaml  App.xaml.cs  COMPort.cs  CsharpReceiver.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs
MicroController/STM32F103C8T6/: .cproject  .mxproject  .project  MapEletro Debug.launch  MapEletro.ioc
MicroController/STM32F103C8T6/Core/Inc/: main.h
MicroController/STM32F103C8T6/Debug/: MapEletro.elf  MapEletro.list  MapEletro.map  makefile  objects.list
(+43 files in other folders)
